PR/60011: TLS alignment wrong on powerpc

Fix previous where I only got the alignment right for the architectures
where the thread pointer points to the struct tcb. Handle the
architectures that have a thread pointer that is relative to end of the
struct tcb, e.g. powerpc.

Hopefully the commit in the tls.c explains what's going on.

Thanks to riastrah@ and andvar@ for comments/things to fix.